--- a/public/admin.html
+++ b/public/admin.html
@@ -15,15 +15,15 @@
             <div class="admin-logo">
                 <span class="logo-icon">📺</span>
                 <h2>MiStream</h2>
-                <span class="admin-badge">Admin</span>
+                <span class="admin-badge">Hola Uri!</span>
             </div>
 
             <nav class="admin-nav">
                 <button class="nav-btn active" data-panel="stream">
-                    🎬 Transmisión
+                    Transmisión
                 </button>
                 <button class="nav-btn" data-panel="chat">
-                    💬 Chat
+                    Chat
                 </button>
             </nav>
 
@@ -39,7 +39,7 @@
             </div>
 
             <button class="btn-logout" id="logoutBtn">
-                🚪 Cerrar Sesión
+                Cerrar Sesión
             </button>
         </aside>
 
