--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="viewer-count">
-          <span class="viewer-icon">👥</span>
+          <span class="viewer-icon"></span>
           <span id="viewerCount">0</span> espectadores
         </div>
       </div>
@@ -45,7 +45,7 @@
       <!-- Chat Section -->
       <aside class="chat-section">
         <div class="chat-header">
-          <h3>💬 Chat en Vivo</h3>
+          <h3>Chat en Vivo</h3>
         </div>
         <div class="chat-messages" id="chatMessages">
           <div class="chat-welcome">
@@ -62,7 +62,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <p>MiStream © 2024 - Plataforma de TV en Vivo</p>
+      <p>MiStream © 2026 By Uri Thejeda - Plataforma de TV en Vivo</p>
     </footer>
   </div>
 
